--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 EXPOSE 8000
 ENV PORT=8000 MIX_ENV=prod REPLACE_OS_VARS=true SHELL=/bin/bash
 WORKDIR /app
-COPY ./kubernetes_elixir_example.tar.gz ./
+COPY kubernetes_elixir_example.tar.gz ./
 RUN tar xfz kubernetes_elixir_example.tar.gz
 
 ENTRYPOINT ["bin/kubernetes_elixir_example"]
